prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_with_aggregation.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nsort artist_id\naggregate { artist_number = count artist_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_with_aggregation.prql
---
frames:
- - 1:12-26
  - columns:
    - !All
      input_id: 118
      except: []
    inputs:
    - id: 118
      name: albums
      table:
      - default_db
      - albums
- - 1:27-72
  - columns:
    - !Single
      name:
      - artist_number
      target_id: 126
      target_name: null
    inputs:
    - id: 118
      name: albums
      table:
      - default_db
      - albums
nodes:
- id: 118
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - albums
  parent: 122
- id: 120
  kind: Ident
  span: 1:17-26
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 118
  parent: 122
- id: 122
  kind: 'TransformCall: Sort'
  span: 1:12-26
  children:
  - 118
  - 120
  parent: 129
- id: 126
  kind: RqOperator
  span: 1:55-70
  alias: artist_number
  targets:
  - 127
  parent: 128
- id: 127
  kind: Literal
- id: 128
  kind: Tuple
  span: 1:37-72
  children:
  - 126
  parent: 129
- id: 129
  kind: 'TransformCall: Aggregate'
  span: 1:27-72
  children:
  - 122
  - 128
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - albums
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:12-16
              args:
              - Ident:
                - artist_id
                span: 1:17-26
            span: 1:12-26
          - FuncCall:
              name:
                Ident:
                - aggregate
                span: 1:27-36
              args:
              - Tuple:
                - FuncCall:
                    name:
                      Ident:
                      - count
                      span: 1:55-60
                    args:
                    - Ident:
                      - artist_id
                      span: 1:61-70
                  span: 1:55-70
                  alias: artist_number
                span: 1:37-72
            span: 1:27-72
        span: 1:0-72
    span: 1:0-72
