prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_with_aggregation_and_limit.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nsort artist_id\ntake 10\naggregate { artist_number = count artist_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_with_aggregation_and_limit.prql
---
frames:
- - 1:12-26
  - columns:
    - !All
      input_id: 121
      except: []
    inputs:
    - id: 121
      name: albums
      table:
      - default_db
      - albums
- - 1:27-34
  - columns:
    - !All
      input_id: 121
      except: []
    inputs:
    - id: 121
      name: albums
      table:
      - default_db
      - albums
- - 1:35-80
  - columns:
    - !Single
      name:
      - artist_number
      target_id: 132
      target_name: null
    inputs:
    - id: 121
      name: albums
      table:
      - default_db
      - albums
nodes:
- id: 121
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - albums
  parent: 125
- id: 123
  kind: Ident
  span: 1:17-26
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 121
  parent: 125
- id: 125
  kind: 'TransformCall: Sort'
  span: 1:12-26
  children:
  - 121
  - 123
  parent: 127
- id: 127
  kind: 'TransformCall: Take'
  span: 1:27-34
  children:
  - 125
  - 128
  parent: 135
- id: 128
  kind: Literal
  parent: 127
- id: 132
  kind: RqOperator
  span: 1:63-78
  alias: artist_number
  targets:
  - 133
  parent: 134
- id: 133
  kind: Literal
- id: 134
  kind: Tuple
  span: 1:45-80
  children:
  - 132
  parent: 135
- id: 135
  kind: 'TransformCall: Aggregate'
  span: 1:35-80
  children:
  - 127
  - 134
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - albums
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:12-16
              args:
              - Ident:
                - artist_id
                span: 1:17-26
            span: 1:12-26
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:27-31
              args:
              - Literal:
                  Integer: 10
                span: 1:32-34
            span: 1:27-34
          - FuncCall:
              name:
                Ident:
                - aggregate
                span: 1:35-44
              args:
              - Tuple:
                - FuncCall:
                    name:
                      Ident:
                      - count
                      span: 1:63-68
                    args:
                    - Ident:
                      - artist_id
                      span: 1:69-78
                  span: 1:63-78
                  alias: artist_number
                span: 1:45-80
            span: 1:35-80
        span: 1:0-80
    span: 1:0-80
