prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sstring_escaped_quotes.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# Test s-strings with escaped quotes (regression test for issue #5494)\nlet outputs_sql = (\n  from s\"\n    select 'a' as \\\"col1 foo\\\", 'b' as \\\"col2#bar\\\"\n  \"\n)\n\nfrom outputs_sql\nselect {\n  `col1 foo` = outputs_sql.`col1 foo`,\n  `col2#bar` = outputs_sql.`col2#bar`\n}\n"
input_file: prqlc/prqlc/tests/integration/queries/sstring_escaped_quotes.prql
snapshot_kind: text
---
frames:
- - 1:177-264
  - columns:
    - !Single
      name:
      - col1 foo
      target_id: 122
      target_name: null
    - !Single
      name:
      - col2#bar
      target_id: 123
      target_name: null
    inputs:
    - id: 120
      name: outputs_sql
      table:
      - outputs_sql
nodes:
- id: 120
  kind: Ident
  span: 1:160-176
  ident: !Ident
  - outputs_sql
  parent: 125
- id: 122
  kind: Ident
  span: 1:201-223
  alias: col1 foo
  ident: !Ident
  - this
  - outputs_sql
  - col1 foo
  targets:
  - 120
  parent: 124
- id: 123
  kind: Ident
  span: 1:240-262
  alias: col2#bar
  ident: !Ident
  - this
  - outputs_sql
  - col2#bar
  targets:
  - 120
  parent: 124
- id: 124
  kind: Tuple
  span: 1:184-264
  children:
  - 122
  - 123
  parent: 125
- id: 125
  kind: 'TransformCall: Select'
  span: 1:177-264
  children:
  - 120
  - 124
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Let
      name: outputs_sql
      value:
        FuncCall:
          name:
            Ident:
            - from
            span: 1:93-97
          args:
          - SString:
            - !String "\n    select 'a' as \"col1 foo\", 'b' as \"col2#bar\"\n  "
            span: 1:98-156
        span: 1:89-158
    span: 1:0-158
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:160-164
              args:
              - Ident:
                - outputs_sql
                span: 1:165-176
            span: 1:160-176
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:177-183
              args:
              - Tuple:
                - Ident:
                  - outputs_sql
                  - col1 foo
                  span: 1:201-223
                  alias: col1 foo
                - Ident:
                  - outputs_sql
                  - col2#bar
                  span: 1:240-262
                  alias: col2#bar
                span: 1:184-264
            span: 1:177-264
        span: 1:160-264
    span: 1:158-264
