prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__take.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort {+track_id}\ntake 3..5\n"
input_file: prqlc/prqlc/tests/integration/queries/take.prql
---
frames:
- - 1:25-41
  - columns:
    - !All
      input_id: 10
      except: []
    inputs:
    - id: 10
      name: tracks
      table:
      - default_db
      - tracks
- - 1:42-51
  - columns:
    - !All
      input_id: 10
      except: []
    inputs:
    - id: 10
      name: tracks
      table:
      - default_db
      - tracks
nodes:
- id: 10
  kind: Ident
  span: 1:13-24
  ident: !Ident
  - default_db
  - tracks
  parent: 13
- id: 11
  kind: Ident
  span: 1:31-40
  ident: !Ident
  - this
  - tracks
  - track_id
  targets:
  - 10
  parent: 13
- id: 13
  kind: 'TransformCall: Sort'
  span: 1:25-41
  children:
  - 10
  - 11
  parent: 17
- id: 14
  kind: Literal
  span: 1:47-48
  alias: start
  parent: 17
- id: 15
  kind: Literal
  span: 1:50-51
  alias: end
  parent: 17
- id: 17
  kind: 'TransformCall: Take'
  span: 1:42-51
  children:
  - 13
  - 14
  - 15
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:13-17
              args:
              - Ident:
                - tracks
                span: 1:18-24
            span: 1:13-24
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:25-29
              args:
              - Tuple:
                - Unary:
                    op: Add
                    expr:
                      Ident:
                      - track_id
                      span: 1:32-40
                  span: 1:31-40
                span: 1:30-41
            span: 1:25-41
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:42-46
              args:
              - Range:
                  start:
                    Literal:
                      Integer: 3
                    span: 1:47-48
                  end:
                    Literal:
                      Integer: 5
                    span: 1:50-51
                span: 1:47-51
            span: 1:42-51
        span: 1:13-51
    span: 1:0-51
