prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__text_module.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\n# glaredb:skip — TODO: started raising an error on 2024-05-20; see `window.prql`\n# for more details\nfrom albums\nselect {\n    title,\n    title_and_spaces = f\"  {title}  \",\n    low = (title | text.lower),\n    up = (title | text.upper),\n    ltrimmed = (title | text.ltrim),\n    rtrimmed = (title | text.rtrim),\n    trimmed = (title | text.trim),\n    len = (title | text.length),\n    subs = (title | text.extract 2 5),\n    replace = (title | text.replace \"al\" \"PIKA\"),\n}\nsort {title}\nfilter (title | text.starts_with \"Black\") || (title | text.contains \"Sabbath\") || (title | text.ends_with \"os\")\n"
input_file: prqlc/prqlc/tests/integration/queries/text_module.prql
---
frames:
- - 1:127-481
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 14
      target_name: null
    - !Single
      name:
      - title_and_spaces
      target_id: 15
      target_name: null
    - !Single
      name:
      - low
      target_id: 17
      target_name: null
    - !Single
      name:
      - up
      target_id: 20
      target_name: null
    - !Single
      name:
      - ltrimmed
      target_id: 23
      target_name: null
    - !Single
      name:
      - rtrimmed
      target_id: 26
      target_name: null
    - !Single
      name:
      - trimmed
      target_id: 29
      target_name: null
    - !Single
      name:
      - len
      target_id: 32
      target_name: null
    - !Single
      name:
      - subs
      target_id: 35
      target_name: null
    - !Single
      name:
      - replace
      target_id: 41
      target_name: null
    inputs:
    - id: 13
      name: albums
      table:
      - default_db
      - albums
- - 1:482-494
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 14
      target_name: null
    - !Single
      name:
      - title_and_spaces
      target_id: 15
      target_name: null
    - !Single
      name:
      - low
      target_id: 17
      target_name: null
    - !Single
      name:
      - up
      target_id: 20
      target_name: null
    - !Single
      name:
      - ltrimmed
      target_id: 23
      target_name: null
    - !Single
      name:
      - rtrimmed
      target_id: 26
      target_name: null
    - !Single
      name:
      - trimmed
      target_id: 29
      target_name: null
    - !Single
      name:
      - len
      target_id: 32
      target_name: null
    - !Single
      name:
      - subs
      target_id: 35
      target_name: null
    - !Single
      name:
      - replace
      target_id: 41
      target_name: null
    inputs:
    - id: 13
      name: albums
      table:
      - default_db
      - albums
- - 1:495-606
  - columns:
    - !Single
      name:
      - albums
      - title
      target_id: 14
      target_name: null
    - !Single
      name:
      - title_and_spaces
      target_id: 15
      target_name: null
    - !Single
      name:
      - low
      target_id: 17
      target_name: null
    - !Single
      name:
      - up
      target_id: 20
      target_name: null
    - !Single
      name:
      - ltrimmed
      target_id: 23
      target_name: null
    - !Single
      name:
      - rtrimmed
      target_id: 26
      target_name: null
    - !Single
      name:
      - trimmed
      target_id: 29
      target_name: null
    - !Single
      name:
      - len
      target_id: 32
      target_name: null
    - !Single
      name:
      - subs
      target_id: 35
      target_name: null
    - !Single
      name:
      - replace
      target_id: 41
      target_name: null
    inputs:
    - id: 13
      name: albums
      table:
      - default_db
      - albums
nodes:
- id: 13
  kind: Ident
  span: 1:115-126
  ident: !Ident
  - default_db
  - albums
  parent: 48
- id: 14
  kind: Ident
  span: 1:140-145
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
  parent: 47
- id: 15
  kind: FString
  span: 1:170-184
  alias: title_and_spaces
  targets:
  - 16
  parent: 47
- id: 16
  kind: Ident
  span: 1:175-180
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 17
  kind: RqOperator
  span: 1:205-215
  alias: low
  targets:
  - 19
  parent: 47
- id: 19
  kind: Ident
  span: 1:197-202
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 20
  kind: RqOperator
  span: 1:236-246
  alias: up
  targets:
  - 22
  parent: 47
- id: 22
  kind: Ident
  span: 1:228-233
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 23
  kind: RqOperator
  span: 1:273-283
  alias: ltrimmed
  targets:
  - 25
  parent: 47
- id: 25
  kind: Ident
  span: 1:265-270
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 26
  kind: RqOperator
  span: 1:310-320
  alias: rtrimmed
  targets:
  - 28
  parent: 47
- id: 28
  kind: Ident
  span: 1:302-307
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 29
  kind: RqOperator
  span: 1:346-355
  alias: trimmed
  targets:
  - 31
  parent: 47
- id: 31
  kind: Ident
  span: 1:338-343
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 32
  kind: RqOperator
  span: 1:377-388
  alias: len
  targets:
  - 34
  parent: 47
- id: 34
  kind: Ident
  span: 1:369-374
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 35
  kind: RqOperator
  span: 1:411-427
  alias: subs
  targets:
  - 38
  - 39
  - 40
  parent: 47
- id: 38
  kind: Literal
  span: 1:424-425
- id: 39
  kind: Literal
  span: 1:426-427
- id: 40
  kind: Ident
  span: 1:403-408
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 41
  kind: RqOperator
  span: 1:453-477
  alias: replace
  targets:
  - 44
  - 45
  - 46
  parent: 47
- id: 44
  kind: Literal
  span: 1:466-470
- id: 45
  kind: Literal
  span: 1:471-477
- id: 46
  kind: Ident
  span: 1:445-450
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 13
- id: 47
  kind: Tuple
  span: 1:134-481
  children:
  - 14
  - 15
  - 17
  - 20
  - 23
  - 26
  - 29
  - 32
  - 35
  - 41
  parent: 48
- id: 48
  kind: 'TransformCall: Select'
  span: 1:127-481
  children:
  - 13
  - 47
  parent: 51
- id: 49
  kind: Ident
  span: 1:488-493
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 14
  parent: 51
- id: 51
  kind: 'TransformCall: Sort'
  span: 1:482-494
  children:
  - 48
  - 49
  parent: 71
- id: 52
  kind: RqOperator
  span: 1:502-606
  targets:
  - 54
  - 66
  parent: 71
- id: 54
  kind: RqOperator
  span: 1:502-573
  targets:
  - 56
  - 61
- id: 56
  kind: RqOperator
  span: 1:511-535
  targets:
  - 59
  - 60
- id: 59
  kind: Literal
  span: 1:528-535
- id: 60
  kind: Ident
  span: 1:503-508
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 14
- id: 61
  kind: RqOperator
  span: 1:549-572
  targets:
  - 64
  - 65
- id: 64
  kind: Literal
  span: 1:563-572
- id: 65
  kind: Ident
  span: 1:541-546
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 14
- id: 66
  kind: RqOperator
  span: 1:586-605
  targets:
  - 69
  - 70
- id: 69
  kind: Literal
  span: 1:601-605
- id: 70
  kind: Ident
  span: 1:578-583
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 14
- id: 71
  kind: 'TransformCall: Filter'
  span: 1:495-606
  children:
  - 51
  - 52
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:115-119
              args:
              - Ident:
                - albums
                span: 1:120-126
            span: 1:115-126
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:127-133
              args:
              - Tuple:
                - Ident:
                  - title
                  span: 1:140-145
                - FString:
                  - !String '  '
                  - !Expr
                    expr:
                      Ident:
                      - title
                      span: 1:175-180
                    format: null
                  - !String '  '
                  span: 1:170-184
                  alias: title_and_spaces
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:197-202
                    - Ident:
                      - text
                      - lower
                      span: 1:205-215
                  span: 1:196-216
                  alias: low
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:228-233
                    - Ident:
                      - text
                      - upper
                      span: 1:236-246
                  span: 1:227-247
                  alias: up
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:265-270
                    - Ident:
                      - text
                      - ltrim
                      span: 1:273-283
                  span: 1:264-284
                  alias: ltrimmed
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:302-307
                    - Ident:
                      - text
                      - rtrim
                      span: 1:310-320
                  span: 1:301-321
                  alias: rtrimmed
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:338-343
                    - Ident:
                      - text
                      - trim
                      span: 1:346-355
                  span: 1:337-356
                  alias: trimmed
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:369-374
                    - Ident:
                      - text
                      - length
                      span: 1:377-388
                  span: 1:368-389
                  alias: len
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:403-408
                    - FuncCall:
                        name:
                          Ident:
                          - text
                          - extract
                          span: 1:411-423
                        args:
                        - Literal:
                            Integer: 2
                          span: 1:424-425
                        - Literal:
                            Integer: 5
                          span: 1:426-427
                      span: 1:411-427
                  span: 1:402-428
                  alias: subs
                - Pipeline:
                    exprs:
                    - Ident:
                      - title
                      span: 1:445-450
                    - FuncCall:
                        name:
                          Ident:
                          - text
                          - replace
                          span: 1:453-465
                        args:
                        - Literal:
                            String: al
                          span: 1:466-470
                        - Literal:
                            String: PIKA
                          span: 1:471-477
                      span: 1:453-477
                  span: 1:444-478
                  alias: replace
                span: 1:134-481
            span: 1:127-481
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:482-486
              args:
              - Tuple:
                - Ident:
                  - title
                  span: 1:488-493
                span: 1:487-494
            span: 1:482-494
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:495-501
              args:
              - Binary:
                  left:
                    Binary:
                      left:
                        Pipeline:
                          exprs:
                          - Ident:
                            - title
                            span: 1:503-508
                          - FuncCall:
                              name:
                                Ident:
                                - text
                                - starts_with
                                span: 1:511-527
                              args:
                              - Literal:
                                  String: Black
                                span: 1:528-535
                            span: 1:511-535
                        span: 1:503-535
                      op: Or
                      right:
                        Pipeline:
                          exprs:
                          - Ident:
                            - title
                            span: 1:541-546
                          - FuncCall:
                              name:
                                Ident:
                                - text
                                - contains
                                span: 1:549-562
                              args:
                              - Literal:
                                  String: Sabbath
                                span: 1:563-572
                            span: 1:549-572
                        span: 1:541-572
                    span: 1:502-573
                  op: Or
                  right:
                    Pipeline:
                      exprs:
                      - Ident:
                        - title
                        span: 1:578-583
                      - FuncCall:
                          name:
                            Ident:
                            - text
                            - ends_with
                            span: 1:586-600
                          args:
                          - Literal:
                              String: os
                            span: 1:601-605
                        span: 1:586-605
                    span: 1:578-605
                span: 1:502-606
            span: 1:495-606
        span: 1:115-606
    span: 1:0-606
