prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__wildcard_this.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect {album_id, title, artist_id}\nsort this.*\n"
input_file: prqlc/prqlc/tests/integration/queries/wildcard_this.prql
---
frames:
- - 1:12-47
  - columns:
    - !Single
      name:
      - albums
      - album_id
      target_id: 123
      target_name: null
    - !Single
      name:
      - albums
      - title
      target_id: 124
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 125
      target_name: null
    inputs:
    - id: 121
      name: albums
      table:
      - default_db
      - albums
- - 1:48-59
  - columns:
    - !Single
      name:
      - albums
      - album_id
      target_id: 123
      target_name: null
    - !Single
      name:
      - albums
      - title
      target_id: 124
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 125
      target_name: null
    inputs:
    - id: 121
      name: albums
      table:
      - default_db
      - albums
nodes:
- id: 121
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - albums
  parent: 127
- id: 123
  kind: Ident
  span: 1:20-28
  ident: !Ident
  - this
  - albums
  - album_id
  targets:
  - 121
  parent: 126
- id: 124
  kind: Ident
  span: 1:30-35
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 121
  parent: 126
- id: 125
  kind: Ident
  span: 1:37-46
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 121
  parent: 126
- id: 126
  kind: Tuple
  span: 1:19-47
  children:
  - 123
  - 124
  - 125
  parent: 127
- id: 127
  kind: 'TransformCall: Select'
  span: 1:12-47
  children:
  - 121
  - 126
  parent: 133
- id: 129
  kind: Ident
  ident: !Ident
  - this
  - albums
  - album_id
  targets:
  - 123
  parent: 133
- id: 130
  kind: Ident
  ident: !Ident
  - this
  - albums
  - title
  targets:
  - 124
  parent: 133
- id: 131
  kind: Ident
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 125
  parent: 133
- id: 133
  kind: 'TransformCall: Sort'
  span: 1:48-59
  children:
  - 127
  - 129
  - 130
  - 131
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - albums
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:12-18
              args:
              - Tuple:
                - Ident:
                  - album_id
                  span: 1:20-28
                - Ident:
                  - title
                  span: 1:30-35
                - Ident:
                  - artist_id
                  span: 1:37-46
                span: 1:19-47
            span: 1:12-47
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:48-52
              args:
              - Ident:
                - this
                - '*'
                span: 1:53-59
            span: 1:48-59
        span: 1:0-59
    span: 1:0-59
